# nutufts_edepsim_dataset_maker

./: .gitignore  .gitmodules  README.md  build_darknews.sh  build_edep_sim.sh  build_simpledet.sh  setenv_py3.sh  setenv_py3_container.sh  start_simpledet_container.sh  start_tufts_container.sh
container_recipes/: Dockerfile_simpledet_petastorm  Dockerfile_u20.02_geant4.10.06.p03  README.md  singularity_simpledet_petastorm
darknews/install/: README.md
darknews_epem_images/: README.md  emd_example.py  example_hepevt.txt  hdf5dataset.py  hepevt_example.mac  test_hdf5_dataloader.py
edep-sim/: .gitignore  README.md
edeptly/edeptly/: __init__.py  draw_edepsim_points.py  draw_edepsim_trajectories.py
shower_classifier_clue/: README.md  electron.mac  gamma.mac  larblock.gdml  run_edepsim2hdf5.py  test_hdf5_dataloader.py  vis_edep_hits.ipynb
simpledet/: CMakeLists.txt  README.md
simpledet/cmake/: Config.cmake.in
simpledet/python/simpledet/: __init__.py
simpledet/python/simpledet/petastorm/: petastorm_schema.py  reader.py
simpledet/simpledet/: CMakeLists.txt
simpledet/simpledet/core/: CMakeLists.txt  Pixel2DReadout.cxx  Pixel2DReadout.h  PixelGrid.cxx  PixelGrid.h  simpledet_core_LinkDef.h
simpledet/simpledet/edepsim/: CMakeLists.txt  EDepSimInterface.cxx  EDepSimInterface.h  simpledet_edepsim_LinkDef.h
simpledet/simpledet/io/: CMakeLists.txt  simpledet_io_LinkDef.h
simpledet/test/: test_dataloader.py  test_edepsim2image.py  test_hdf5_dataloader.py  test_save2petastormdb.py
troubleshooting/: pyspark_cannot_create_db.md
